# use-gpt-3.5-turbo

./: .gitignore  README.md  prompt-ex.py  pyproject.toml
notebook/: prompt-ex.ipynb
