[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["tsutsumi-ozro <soccerbakadaiki@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
pdfminer = "^20191125"
pdfminer-six = "^20221105"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
